tests/fixtures/effect-compiler/errors/EFX2404.effect
// @efx-no-check parser tests are disabled for now

CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () { } }
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
